--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "ethers": "^5.6.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
