--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,8 @@
 {
   "name": "interface-demo",
   "version": "0.1.0",
-  "homepage": ".",
-  "private": true,
+  "homepage": "https://sgqrpromax.github.io/SGQR-Pro-Max",
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
