--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,9 @@
   "homepage": "https://sgqrpromax.github.io/SGQR-Pro-Max",
   "private": false,
   "dependencies": {
+    "@ethersproject/providers": "^5.7.2",
+    "@ethersproject/wallet": "^5.7.0",
+    "@peersyst/xrp-evm-contracts": "^1.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,7 +17,8 @@
     "react-qr-reader": "^3.0.0-beta-1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "web3": "^1.7.5"
+    "web3": "^1.7.5",
+    "xrpl": "^2.14.0"
   },
   "scripts": {
     "predeploy": "npm run build",
